<resources>
    <string name="app_name">Health Book</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="no_data">No data available</string>
    <string name="title">Title </string>

    <string name="action_profile">Profile</string>
    <string name="action_medicines">Medicines</string>
    <string name="action_notes">Notes</string>
    <string name="action_contacts">Contacts</string>
    <string name="action_appointments">Appointments</string>
    <string name="action_anxiety_tracker">Moods</string>
    <string name="action_calm">KEEP CALM</string>
    <string name="action_links">Links</string>
    <string name="action_lists">Lists</string>
    <string name="action_temp">BODY TEMPERATURE</string>
    <string name="action_health_summary">HEALTH SUMMARY</string>
    <string name="action_finance">Finance</string>
    <string name="action_test_results">TEST RESULTS</string>
    <string name="action_treatment">TREATMENT</string>
    <string name="action_symptoms">SYMPTOMS</string>
    <string name="action_heartrate">HEART RATE</string>

    <string name="action_breath">Breath</string>
    <string name="action_meditate">Meditate</string>
    <string name="action_sleep">Sleep</string>
    <string name="action_oxy">OXYGEN LEVEL</string>
    <string name="action_fluid_intake">FLUID INTAKE</string>
    <string name="action_prayers">Prayers</string>
    <string name="action_affirmations">Affirmations</string>

    <string name="action_list1">What to take to specialist appointment?</string>
    <string name="action_list2">What to take to chemo?</string>
    <string name="action_list3">What to ask the doctor?</string>

    <string name="title_activity_profile">PROFILE</string>
    <string name="title_activity_contact">CONTACTS</string>
    <string name="title_activity_medicine">MEDICATIONS</string>
    <string name="title_activity_appointment">APPOINTMENTS</string>
    <string name="title_activity_links">USEFUL LINKS</string>
    <string name="title_activity_calm">CREATE CALM</string>
    <string name="title_activity_lists">MY LISTS</string>
    <string name="title_activity_notes">NOTES TO KEEP</string>
    <string name="title_activity_mood">MOOD TRACKER</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_terms">Terms and conditions</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_reminder_appointment">Appointment Reminder</string>
    <string name="title_activity_reminder_med">Medicine Reminder</string>
    <string name="title_activity_temp">Temperature Record</string>
    <string name="title_activity_oxy">Oxygen Level Record</string>
    <string name="title_activity_fluid_intake">Fluid Intake Record</string>

    <string name="name_empty_field_message">Name cannot be empty</string>
    <string name="mood_empty_field_message">Please select mood</string>
    <string name="temp_empty_field_message">Please enter temperature</string>
    <string name="email_invalid_message">Email Invalid</string>
    <string name="phone_invalid_message">Phone Invalid</string>
    <string name="saved_message">Data has been saved</string>

    <string name="mood_notes_hint">Add notes .... </string>

    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_call">Call</string>
    <string name="menu_email">Email</string>
    <string name="menu_send">Send</string>
    <string name="menu_save">Save</string>
    <string name="menu_pdf">Create pdf</string>

    <string name="radio_temp_c">°C</string>
    <string name="radio_temp_f">°F</string>
    <string name="radio_ml">ml</string>
    <string name="radio_oz">oz</string>
    <string name="radio_cup">cup</string>


    <string name="useful_link1_text">Download your ‘Cooking for Chemo’ recipe book here</string>
    <string name="useful_link1">http://www.iconcancercare.com.au/about-us/icc-news/download-cooking-chemo/</string>
    <string name="useful_link2_text">Tasmanian recipes video to offer new dietary ideas for chemotherapy patients</string>
    <string name="useful_link2">http://www.abc.net.au/news/2017-04-16/video-to-offer-dietary-ideas-for-cancer-patients/8434954</string>
    <string name="useful_link3_text">Cookbooks for Cancer Patients</string>
    <string name="useful_link3">http://cook-books.com.au/ccp0-catshow/cancer-cookbooks-recipe-books.html</string>

</resources>
