<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textColor="@color/colorPrimary"
            android:text="@string/useful_link1_text" />
        <TextView
            android:id="@+id/textView3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textColor="@color/colorAccent"
            android:autoLink="web"
            android:paddingBottom="30dp"
            android:text="@string/useful_link1" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textColor="@color/colorPrimary"
            android:text="@string/useful_link2_text" />
        <TextView
            android:id="@+id/textView5"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textColor="@color/colorAccent"
            android:autoLink="web"
            android:paddingBottom="30dp"
            android:text="@string/useful_link2" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textColor="@color/colorPrimary"
            android:text="@string/useful_link3_text" />
        <TextView
            android:id="@+id/textView7"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textColor="@color/colorAccent"
            android:autoLink="web"
            android:paddingBottom="30dp"
            android:text="@string/useful_link3" />

    </LinearLayout>

</ScrollView>